fixed dateonly glitch, SGAPIKEY persist

--- a/public/css/list.css
+++ b/public/css/list.css
@@ -45,3 +45,6 @@ tbody:after {
     border-bottom: solid 1px #CCCCCC;
 }
 
+.hiliteme {
+  background-color: #FFFFCC;
+}
